# otus-bulk

./: .travis.yml  CMakeLists.txt  README.md  main.cpp
batcher/: Batcher.cpp  Batcher.h
bulk/: Bulk.cpp  Bulk.h  SettingsBulk.h
test/: CMakeLists.txt  blockTest.cpp  test.cpp
writer/: Writer.h
writer/Console/: ConsoleWriter.cpp  ConsoleWriter.h
writer/File/: FileWriter.cpp  FileWriter.h
